@@ -1,3 +1,8 @@
+2006-09-05  John W. Eaton  <jwe@octave.org>
+
+	* mex.cc (mxArray_sparse::as_octave_value): Cast nzmax to
+	octave_idx_type for sparse matrix constructors.
+
 2006-09-01  John W. Eaton  <jwe@octave.org>
 
 	* dirfns.cc: Don't handle nargout == 0 as a special case.
